--- a/app/build.gradle
+++ b/app/build.gradle
@@ -34,6 +34,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:28.0.0'
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    implementation 'com.bm.photoview:library:1.4.1'
     implementation files('libs/json.jar')
     implementation files('libs/youtu-java-sdk.jar')
 }
