接入服务器初试

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -39,4 +39,7 @@ dependencies {
     implementation files('libs/youtu-java-sdk.jar')
     implementation 'com.gjiazhe:PanoramaImageView:1.0'
     implementation 'com.romainpiel.shimmer:library:1.4.0@aar'
+
+    implementation 'com.loopj.android:android-async-http:1.4.9'
+
 }
