--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,6 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
-    implementation project(':LogUtil')
     implementation 'com.squareup.okio:okio:2.2.2'
     implementation 'com.squareup.okhttp3:okhttp:4.0.1'
     implementation 'com.google.code.gson:gson:2.8.5'
@@ -41,5 +40,6 @@ dependencies {
     implementation 'com.romainpiel.shimmer:library:1.4.0@aar'
 
     implementation 'com.loopj.android:android-async-http:1.4.9'
-
+    //logger
+    implementation 'com.orhanobut:logger:1.15'
 }
